2004-03-18  Mikael Hallendal  <micke@imendio.com>

	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/mrproject2html.xsl:
	- s/MrProject/Planner/g, solves #137571

2004-03-17  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c: Cleaned code commented.
	* src/planner-resource-dialog.c: Some support for undo stuff.
	We need to find how to undo keystroke dialogs entries.
	If the resource is removed, the dialog is closed.
	* src/planner-task-dialog.c: If task removed, close the dialog.

2004-03-16  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c: Fix bug #134969, to fix printing
	problems with gantt chart. Patch from Heath Wilkinson again.
	
	* planner.spec.in (BuildRequires): Bring a bit more up to date.

	* configure.in: Up libxml and libxslt requirement, to fix bug
	#136752. Thanks to Jared Jones.

2004-03-15  Richard Hult  <richard@imendio.com>

	* data/glade/task-dialog.glade: Use better step/page sizes. Fixes
	bug #132342, idea by Lincoln Phipps.

	* src/planner-gantt-row.c: (gantt_row_event): Fix indentation and
	don't mix declarations and assignments.

2004-03-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c (planner_task_tree_link_tasks): Hm, I
	could have sworn that this worked before. Reverse the list to get
	the right order when linking.

	* data/glade/add-predecessor.glade: Up the limits to very low/high
	numbers.

2004-03-15  Richard Hult  <richard@imendio.com>

	* docs/sql/README: Tweak the instructions.

	* Add short name for resources. Fixes bug #132345, based on patch
	from Lincoln Phipps. Also fix a few memory leaks while at it.
	
2004-03-15  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-print.c (planner_gantt_print_data_new): Patch
	from Heath Wilkinson to fix bug #137204.

	* src/Makefile.am:
	* src/planner-gantt-chart.c: (gantt_chart_insert_task),
	(planner_gantt_chart_get_view), (planner_gantt_chart_set_view),
	(planner_gantt_chart_get_highlight_critical_tasks):